forms-flow-analytics/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-analytics
  namespace : forms-flow-analytics
  labels:
    app.kubernetes.io/name: formflowwebanalytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: formflowwebanalytics
  template:
    metadata:
      labels:
        app.kubernetes.io/name: formflowwebanalytics
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: form-flow-analytics
          image: formsflow/redash:10.1.4
          ports:
            - containerPort: 7000
              name: analytics
              protocol: TCP
